--- a/src/scss/mobile/_breakpoints.scss
+++ b/src/scss/mobile/_breakpoints.scss
@@ -2,9 +2,33 @@
 @use "../global/variables" as var;
 @use "../global/typography" as fonts;
 
+@media screen and (max-width: 760px) {
+    .portfolio {
+        &__contents {
+            grid-template: auto / 1fr;
+        }
+    }
+
+    .exit-icon::after {
+        transform: translateX(-85%)   translateY(-100%);
+    }
+
+    .buttons-category-portfolio {
+        display: block;
+        text-align: center;
+
+        &::before, &::after {
+            display: none;
+        }
+    }
+
+    .buttons-category__text {
+        text-align: center;
+    }
+}
+
 @media screen and (max-width: 660px) {
     .contents {
-
         padding: util.rem(32) util.rem(32);
 
         &__header {
