--- a/src/scss/tablet/_breakpoints.scss
+++ b/src/scss/tablet/_breakpoints.scss
@@ -2,39 +2,16 @@
 @use "../global/variables" as var;
 @use "../global/typography" as fonts;
 
-@media screen and (max-width: 1100px) {
-    .portfolio {
-        &__contents {
-            grid-template: auto / repeat(2, 1fr);
-        }
-    }
-
+@media screen and (max-width: 1190px) {
     .exit-icon::after {
         transform: translateX(-85%)   translateY(-100%);
     }
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 1100px) {
     .portfolio {
         &__contents {
-            grid-template: auto / 1fr;
+            grid-template: auto / repeat(2, 1fr);
         }
-    }
-
-    .exit-icon::after {
-        transform: translateX(-85%)   translateY(-100%);
-    }
-
-    .buttons-category {
-        display: block;
-        text-align: center;
-
-        &::before, &::after {
-            display: none;
-        }
-    }
-
-    .buttons-category__text {
-        text-align: center;
     }
 }
